--- a/plugins/fetchmyjson/package.json
+++ b/plugins/fetchmyjson/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.0",
-    "fetch": "^1.1.0",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "node-fetch": "^2.6.1"
   }
 }
